# rocket-cms

./: .gitignore  Cargo.toml  LICENSE  Rocket.toml
src/: main.rs
static/: 404.css  admin.js  robots.txt  style.css
templates/: 404.html  admin.html  index.html
